...
    init(viewModel: CashPaymentViewModel) {
        self.viewModel = viewModel
    }
    
    var body: some View {
        VStack(spacing: 0) {
            Text("Prosegui con il pagamento del residuo in contanti")
                .multilineTextAlignment(.center)
                .font(.PAFont.h3)
                .foregroundColor(.white)
                .padding(.bottom, Constants.mediumSpacing)
            
            HStack {
...
